Fixed text-align and changed quote author color to white

--- a/src/components/experience/styles.scss
+++ b/src/components/experience/styles.scss
@@ -14,7 +14,7 @@
         }
 
         h5 {
-            color: #5F5F5F;
+            color: white;
         }
 
         a {
@@ -101,7 +101,7 @@
                     font-family: $heading-font;
                     line-height: 1.3;
                     font-weight: 400;
-                    color: #5F5F5F;
+                    color: white;
                     margin-bottom: 0px;
                 }
 
@@ -194,7 +194,7 @@
             margin-bottom: 1rem;
             line-height: 1.3;
             font-weight: 400;
-            color: #5F5F5F;
+            color: white;
 
             @media only screen and (max-width: $desktop) {
                 font-size: 1.2rem;
@@ -409,6 +409,7 @@
 
                     > p {
                         font-size: clamp(0.6rem, 1.2vw, 1rem);
+                        text-align: justify;
                     }
 
                     > .quote-name {
